[gd_scene load_steps=13 format=3 uid="uid://bawfpqxv7r2di"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_87wkf"]
[ext_resource type="Script" path="res://scripts/main_camera.gd" id="2_85163"]
[ext_resource type="PackedScene" uid="uid://ddkowviw8nkjc" path="res://scenes/level_1.tscn" id="2_ymuoy"]
[ext_resource type="Texture2D" uid="uid://dnxjk7dbjttar" path="res://assets/Healthbar.png" id="4_mju7k"]
[ext_resource type="FontFile" uid="uid://13qpheddq3si" path="res://assets/Minecraft.ttf" id="4_pyveg"]
[ext_resource type="Texture2D" uid="uid://bv54omya1brle" path="res://assets/HealthBarValue.png" id="5_aonnu"]
[ext_resource type="Texture2D" uid="uid://dtw0318322fhq" path="res://assets/SmallChestHolderUIEmpty.png" id="7_gvvn5"]
[ext_resource type="Texture2D" uid="uid://dua853sd8oive" path="res://assets/BigChestHolderUIEmpty.png" id="8_cq8w4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rwjq8"]
size = Vector2(384, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wwvbx"]
size = Vector2(384, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5tyj"]
size = Vector2(384, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfnou"]
size = Vector2(224, 17)

[node name="GameView" type="Node2D"]
script = ExtResource("1_87wkf")

[node name="Level1" parent="." instance=ExtResource("2_ymuoy")]

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2(0, -22)
zoom = Vector2(3, 3)
script = ExtResource("2_85163")

[node name="LeftHUD" type="ColorRect" parent="MainCamera"]
offset_left = -193.0
offset_top = -110.0
offset_right = -120.0
offset_bottom = 110.0
color = Color(0, 0, 0, 1)

[node name="HealthBarTitle" type="Label" parent="MainCamera/LeftHUD"]
layout_mode = 0
offset_left = 6.0
offset_top = 10.0
offset_right = 71.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("4_pyveg")
text = "HEALTH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="MainCamera/LeftHUD"]
layout_mode = 0
offset_left = 3.0
offset_top = 24.0
offset_right = 72.0
offset_bottom = 39.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("4_mju7k")
texture_progress = ExtResource("5_aonnu")

[node name="CenterContainer" type="VBoxContainer" parent="MainCamera/LeftHUD"]
layout_mode = 0
offset_left = 7.0
offset_top = 40.0
offset_right = 69.0
offset_bottom = 216.0
metadata/_edit_group_ = true

[node name="ChestHolder" type="GridContainer" parent="MainCamera/LeftHUD/CenterContainer"]
layout_mode = 2
columns = 2

[node name="ChestHolder1" type="TextureRect" parent="MainCamera/LeftHUD/CenterContainer/ChestHolder"]
layout_mode = 2
texture = ExtResource("7_gvvn5")

[node name="ChestHolder2" type="TextureRect" parent="MainCamera/LeftHUD/CenterContainer/ChestHolder"]
layout_mode = 2
texture = ExtResource("7_gvvn5")

[node name="ChestHolder3" type="TextureRect" parent="MainCamera/LeftHUD/CenterContainer/ChestHolder"]
layout_mode = 2
texture = ExtResource("7_gvvn5")

[node name="ChestHolder4" type="TextureRect" parent="MainCamera/LeftHUD/CenterContainer/ChestHolder"]
layout_mode = 2
texture = ExtResource("7_gvvn5")

[node name="ChestHolder5" type="TextureRect" parent="MainCamera/LeftHUD/CenterContainer/ChestHolder"]
layout_mode = 2
texture = ExtResource("7_gvvn5")

[node name="ChestHolder6" type="TextureRect" parent="MainCamera/LeftHUD/CenterContainer/ChestHolder"]
layout_mode = 2
texture = ExtResource("7_gvvn5")

[node name="ChestHolder7" type="TextureRect" parent="MainCamera/LeftHUD/CenterContainer/ChestHolder"]
layout_mode = 2
texture = ExtResource("7_gvvn5")

[node name="ChestHolder8" type="TextureRect" parent="MainCamera/LeftHUD/CenterContainer/ChestHolder"]
layout_mode = 2
texture = ExtResource("7_gvvn5")

[node name="BigChestHolder" type="TextureRect" parent="MainCamera/LeftHUD/CenterContainer"]
layout_mode = 2
texture = ExtResource("8_cq8w4")
stretch_mode = 5

[node name="RightHUD" type="ColorRect" parent="MainCamera"]
offset_left = 120.0
offset_top = -110.0
offset_right = 195.0
offset_bottom = 110.0
color = Color(0, 0, 0, 1)

[node name="ScoreLabelTitle" type="Label" parent="MainCamera/RightHUD"]
layout_mode = 0
offset_left = 2.0
offset_top = 10.0
offset_right = 61.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("4_pyveg")
text = "SCORE"
vertical_alignment = 1

[node name="ScoreDisplay" type="Label" parent="MainCamera/RightHUD"]
layout_mode = 0
offset_left = 1.0
offset_top = 24.0
offset_right = 73.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("4_pyveg")
text = "0
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Top" type="StaticBody2D" parent="MainCamera"]
position = Vector2(1, -108)
collision_mask = 2
metadata/_edit_group_ = true

[node name="TopShape" type="CollisionShape2D" parent="MainCamera/Top"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_rwjq8")

[node name="Area2D" type="Area2D" parent="MainCamera"]
position = Vector2(0, 108)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCamera/Area2D"]
position = Vector2(-1, 6.5)
shape = SubResource("RectangleShape2D_wwvbx")

[node name="Bottom" type="StaticBody2D" parent="MainCamera/Area2D"]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCamera/Area2D/Bottom"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_d5tyj")

[node name="MoveDownTimer" type="Timer" parent="MainCamera"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="LevelEnd" type="Area2D" parent="."]
collision_mask = 2

[node name="LevelEndShape" type="CollisionShape2D" parent="LevelEnd"]
position = Vector2(0, -76.5)
shape = SubResource("RectangleShape2D_tfnou")

[connection signal="timeout" from="MainCamera/MoveDownTimer" to="MainCamera" method="_on_timer_timeout"]
[connection signal="area_entered" from="LevelEnd" to="." method="_on_level_end_area_entered"]
